--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,28 @@
         app:barrierDirection="top"
         app:constraint_referenced_ids="content" />
 
+    <TextView
+        android:id="@+id/textToEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/toolsTop"
+        app:layout_constraintStart_toEndOf="@+id/edit"
+        app:layout_constraintEnd_toStartOf="@+id/cancel"
+        android:padding="@dimen/commonSpacing"
+        android:background="@color/white"
+        />
+
+    <ImageView
+        android:id="@+id/edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/toolsTop"
+        app:layout_constraintEnd_toEndOf="@+id/textToEdit"
+        android:src="@drawable/ic_edit"
+        android:background="@color/white"
+        android:padding="@dimen/commonSpacing"
+        />
+
     <EditText
         android:id="@+id/content"
         android:layout_width="0dp"
