--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -40,14 +40,15 @@
         app:layout_constraintTop_toBottomOf="@id/author"
         tools:text="@sample/posts.json/data/published" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/menu"
+        style="@style/Widget.AppTheme.Viewing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_default"
         android:background="@android:color/transparent"
         android:contentDescription="@string/description_post_menu"
-        android:src="@drawable/ic_baseline_more_vert_24"
+        app:icon="@drawable/ic_baseline_more_vert_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,14 +68,16 @@
         app:layout_constraintTop_toTopOf="@id/barrierTop"
         tools:text="@sample/posts.json/data/content" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/favorite"
+        style="@style/Widget.AppTheme.FavoriteCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_default"
         android:background="@android:color/transparent"
+        android:checkable="true"
         android:contentDescription="@string/favorite"
-        android:src="@drawable/ic_baseline_favorite_border_24"
+        app:icon="@drawable/ic_favorite_24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/content" />
 
@@ -82,20 +85,21 @@
         android:id="@+id/favorites"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="@dimen/text_margin"
         app:layout_constraintBottom_toBottomOf="@id/favorite"
         app:layout_constraintStart_toEndOf="@id/favorite"
         app:layout_constraintTop_toTopOf="@id/favorite"
         tools:text="@sample/posts.json/data/favorites" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/share"
+        style="@style/Widget.AppTheme.Viewing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_default"
         android:background="@android:color/transparent"
         android:contentDescription="@string/share"
-        android:src="@drawable/ic_baseline_share_24"
+        app:icon="@drawable/ic_baseline_share_24"
         app:layout_constraintBottom_toBottomOf="@id/favorite"
         app:layout_constraintStart_toEndOf="@id/favorites"
         app:layout_constraintTop_toTopOf="@id/favorite" />
@@ -104,32 +108,33 @@
         android:id="@+id/shares"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="@dimen/text_margin"
         app:layout_constraintBottom_toBottomOf="@id/share"
         app:layout_constraintStart_toEndOf="@id/share"
         app:layout_constraintTop_toTopOf="@id/share"
         tools:text="@sample/posts.json/data/shares" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/view"
+        style="@style/Widget.AppTheme.Viewing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="@dimen/text_margin"
         android:background="@android:color/transparent"
         android:contentDescription="@string/views"
-        android:src="@drawable/ic_baseline_remove_red_eye_24"
+        app:icon="@drawable/ic_baseline_remove_red_eye_24"
         app:layout_constraintBottom_toBottomOf="@id/favorite"
-        app:layout_constraintTop_toTopOf="@id/favorite"
-        app:layout_constraintEnd_toStartOf="@id/views"/>
+        app:layout_constraintEnd_toStartOf="@id/views"
+        app:layout_constraintTop_toTopOf="@id/favorite" />
 
     <TextView
         android:id="@+id/views"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_default"
+        app:layout_constraintBottom_toBottomOf="@id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/view"
-        app:layout_constraintBottom_toBottomOf="@id/view"
         tools:text="@sample/posts.json/data/views" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
