--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,7 @@
 <resources>
     <dimen name="avatar_size">48dp</dimen>
     <dimen name="margin_default">16dp</dimen>
+    <dimen name="text_margin">4dp</dimen>
     <dimen name="commonSpacing">16dp</dimen>
+    <dimen name="iconButtonMinSize">24dp</dimen>
 </resources>
