Main Thread & Background #2

--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -104,7 +104,7 @@
         app:constraint_referenced_ids="content" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/favorite"
+        android:id="@+id/like"
         style="@style/Widget.AppTheme.FavoriteCheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -117,13 +117,13 @@
         app:layout_constraintTop_toBottomOf="@id/content" />
 
     <TextView
-        android:id="@+id/favorites"
+        android:id="@+id/likes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
-        app:layout_constraintBottom_toBottomOf="@id/favorite"
-        app:layout_constraintStart_toEndOf="@id/favorite"
-        app:layout_constraintTop_toTopOf="@id/favorite"
+        app:layout_constraintBottom_toBottomOf="@id/like"
+        app:layout_constraintStart_toEndOf="@id/like"
+        app:layout_constraintTop_toTopOf="@id/like"
         tools:text="@sample/posts.json/data/favorites" />
 
     <com.google.android.material.button.MaterialButton
@@ -135,9 +135,9 @@
         android:background="@android:color/transparent"
         android:contentDescription="@string/share"
         app:icon="@drawable/ic_baseline_share_24"
-        app:layout_constraintBottom_toBottomOf="@id/favorite"
-        app:layout_constraintStart_toEndOf="@id/favorites"
-        app:layout_constraintTop_toTopOf="@id/favorite" />
+        app:layout_constraintBottom_toBottomOf="@id/like"
+        app:layout_constraintStart_toEndOf="@id/like"
+        app:layout_constraintTop_toTopOf="@id/like" />
 
     <TextView
         android:id="@+id/shares"
@@ -158,9 +158,9 @@
         android:background="@android:color/transparent"
         android:contentDescription="@string/views"
         app:icon="@drawable/ic_baseline_remove_red_eye_24"
-        app:layout_constraintBottom_toBottomOf="@id/favorite"
+        app:layout_constraintBottom_toBottomOf="@id/like"
         app:layout_constraintEnd_toStartOf="@id/views"
-        app:layout_constraintTop_toTopOf="@id/favorite" />
+        app:layout_constraintTop_toTopOf="@id/like" />
 
     <TextView
         android:id="@+id/views"
