--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -99,7 +99,7 @@
     <ImageView
         android:id="@+id/attachment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/margin_default"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
@@ -125,7 +125,7 @@
         android:contentDescription="@string/favorite"
         app:icon="@drawable/ic_favorite_24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/content" />
+        app:layout_constraintTop_toBottomOf="@id/bottomBarrier" />
 
     <TextView
         android:id="@+id/likes"
