--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="text_margin">4dp</dimen>
     <dimen name="commonSpacing">16dp</dimen>
     <dimen name="iconButtonMinSize">24dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
