--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -10,16 +10,14 @@
         android:id="@+id/fabTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="top|center"
         android:layout_marginTop="@dimen/iconButtonMinSize"
         android:clickable="true"
         android:focusable="true"
         android:text="@string/new_post"
         android:visibility="gone"
         app:cornerRadius="@dimen/iconButtonMinSize"
-        app:icon="@drawable/ic_baseline_north_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:icon="@drawable/ic_baseline_north_24"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
