--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="commonSpacing">16dp</dimen>
     <dimen name="iconButtonMinSize">24dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="icon_button_padding">24dp</dimen>
+    <dimen name="icon_button_min_size">24dp</dimen>
+    <dimen name="common_spacing">16dp</dimen>
 </resources>
