--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -21,6 +21,9 @@
         <action
             android:id="@+id/action_feedFragment_to_imageFragment"
             app:destination="@id/imageFragment" />
+        <action
+            android:id="@+id/action_feedFragment_self"
+            app:destination="@id/feedFragment" />
     </fragment>
     <fragment
         android:id="@+id/newPostFragment"
@@ -41,4 +44,9 @@
         android:id="@+id/imageFragment"
         android:name="ru.netology.nmedia.activity.ImageFragment"
         android:label="ImageFragment" />
+    <fragment
+        android:id="@+id/signInFragment"
+        android:name="ru.netology.nmedia.activity.SignInFragment"
+        android:label="SignInFragment" >
+    </fragment>
 </navigation>
