--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="favorite">#E61830</color>
     <color name="divider_color">#ccc</color>
+    <color name="mint_transparent">#461CFF89</color>
 </resources>
