--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -24,6 +24,9 @@
         <action
             android:id="@+id/action_feedFragment_self"
             app:destination="@id/feedFragment" />
+        <action
+            android:id="@+id/action_feedFragment_to_signInFragment"
+            app:destination="@id/signInFragment" />
     </fragment>
     <fragment
         android:id="@+id/newPostFragment"
@@ -43,10 +46,13 @@
     <fragment
         android:id="@+id/imageFragment"
         android:name="ru.netology.nmedia.activity.ImageFragment"
-        android:label="ImageFragment" />
+        android:label="ImageFragment"
+        tools:layout="@layout/fragment_image"/>
     <fragment
         android:id="@+id/signInFragment"
         android:name="ru.netology.nmedia.activity.SignInFragment"
-        android:label="SignInFragment" >
+        android:label="SignInFragment"
+        tools:layout="@layout/fragment_sign_in">
+
     </fragment>
 </navigation>
