--- a/app/src/main/res/layout/card_ad.xml
+++ b/app/src/main/res/layout/card_ad.xml
@@ -6,7 +6,8 @@
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:src="@drawable/common_google_signin_btn_text_dark">
 
     </ImageView>
 </FrameLayout>
